--- a/index.html
+++ b/index.html
@@ -47,21 +47,40 @@
           </div> 
         </div>
         <div style="grid-row: 2;" class="card-row-2">
-          Colton Smith 
-        Verified Buyer
-        "We needed the same printed design as the one we had ordered a week prior.
-        Not only did they find the original order, but we also received it in time.
-        Excellent!"
-    
-        Irene Roberts 
-        Verified Buyer
-        "Customer service is always excellent and very quick turn around. Completely
-        delighted with the simplicity of the purchase and the speed of delivery."
-    
-        Anne Wallace 
-        Verified Buyer
-        "Put an order with this company and can only praise them for the very high
-        standard. Will definitely use them again and recommend them to everyone!"
+        <div class="buyer-card colton">
+          <img src="images/image-colton.jpg" alt="Colton Smith">
+          <div class="title-section">
+            <h4>Colton Smith </h4>
+            <h4 class="verified">Verified Buyer </h4>
+          </div>
+          <p>
+            "We needed the same printed design as the one we had ordered a week prior.
+            Not only did they find the original order, but we also received it in time.
+            Excellent!"
+          </p>
+        </div>
+        <div class="buyer-card irene">
+          <img src="images/image-irene.jpg" alt="Irene Roberts">
+          <div class="title-section">
+            <h4>Irene Roberts</h4>
+          <h4 class="verified">Verified Buyer</h4>
+          </div>
+          <p> 
+            "Customer service is always excellent and very quick turn around. Completely
+            delighted with the simplicity of the purchase and the speed of delivery."
+          </p> 
+        </div>
+        <div class="buyer-card anne">
+          <img src="images/image-anne.jpg" alt="Anne Wallace">
+          <div class="title-section">
+            <h4>Anne Wallace</h4>
+            <h4 class="verified">Verified Buyer</h4>
+          </div>
+          <p>
+            "Put an order with this company and can only praise them for the very high
+            standard. Will definitely use them again and recommend them to everyone!"
+          </p>
+        </div>
         </div>
       </div>
     </main>
