moblie version added

--- a/index.html
+++ b/index.html
@@ -21,27 +21,33 @@
           </div>
           <div class="card-row-1-right">
             <div class="review top">
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
+              <div class="images">
+                <img src="images/icon-star.svg" alt="">
+                <img src="images/icon-star.svg" alt="">
+                <img src="images/icon-star.svg" alt="">
+                <img src="images/icon-star.svg" alt="">
+                <img src="images/icon-star.svg" alt="">
+              </div>
               Rated 5 Stars in Reviews
             </div>
             <div class="review mid">
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
+              <div class="images">
+                <img src="images/icon-star.svg" alt="">
+                <img src="images/icon-star.svg" alt="">
+                <img src="images/icon-star.svg" alt="">
+                <img src="images/icon-star.svg" alt="">
+                <img src="images/icon-star.svg" alt="">
+              </div>
               Rated 5 Stars in Report Guru
             </div>
             <div class="review bot">
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
+              <div class="images">
+                <img src="images/icon-star.svg" alt="">
+                <img src="images/icon-star.svg" alt="">
+                <img src="images/icon-star.svg" alt="">
+                <img src="images/icon-star.svg" alt="">
+                <img src="images/icon-star.svg" alt="">
+              </div>
               Rated 5 Stars in BestTech
             </div>
           </div> 
